Fix background color on mobile

--- a/docs/src/style.scss
+++ b/docs/src/style.scss
@@ -99,7 +99,7 @@ pre {
   @media (max-width: 768px) {
     .slider {
       background-image: none;
-      background-color: rgb(155, 89, 182);
+      background-color: rgb(122, 71, 173);
     }
     .slider img {
       width: 100%;
@@ -146,7 +146,7 @@ pre {
   @media (max-width: 768px) {
     .slider {
       background-image: none;
-      background-color: rgb(155, 89, 182);
+      background-color: rgb(122, 71, 173);
     }
     .slider img {
       width: 100%;
